<resources>
    <string name="app_name">Personal Trainer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="personal_trainer">PERSONAL TRAINER</string>
    <string name="good_login">Welcome!</string>
    <string name="bad_login">That username/password combination is invalid.</string>
    <string name="user_name">jdoe</string>
    <string name="password">welcome1</string>
    <string name="logged_in">Logged in:  </string>
    <string name="scheduled">SCHEDULED</string>
    <string name="completed">COMPLETED</string>
    <string name="sessions">SESSIONS</string>
    <string name="add">ADD</string>
    <string name="new_customer">NEW TRAINEE!</string>
    <string name="customers">TRAINEES</string>
    <string name="complete">COMPLETE</string>
    <string name="add_session">ADD A SESSION!</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="complete_session">Complete Session</string>
    <string name="previous">PREV</string>
    <string name="next">NEXT</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="take_a_picture">Take Picture</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="exp_date">Expiration Date</string>
    <string name="em_rcpt">Email Receipt</string>
    <string name="prnt_rcpt">Print Receipt</string>
    <string name="submit">SUBMIT</string>
    <string name="logoff">LogOff</string>
    <string name="logoff_toast">Logging You Off</string>
    <string name="add_trainee">ADD TRAINEE!</string>
    <string name="log_out_dialog">Logging You Out</string>
    <string name="home">Home Screen</string>
    <string name="customer_added">Fresh Meat!</string>
    <string name="new_session_date">New Session Date</string>
    <string name="session_completed">Session Complete!</string>
    <string name="session_added">Session Added!</string>
    <string name="purchaser">Name on Card</string>
    <string name="snapshot">Picture Added!</string>
    <string name="signature">Signature Captured!</string>
    <string name="delete_dialog">Delete Customer?</string>
    <string name="sig_cap">This is a button but it needs to be a signature capture thing</string>
</resources>
