<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:orientation="vertical">

    <fragment
        android:id="@+id/fragment"
        android:name="jasonmcdonald.personaltrainer.UserFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_user"/>
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_session"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/custNameDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        />

    <EditText
        android:id="@+id/sessionDateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/new_session_date"/>

    <EditText
        android:id="@+id/customerNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/purchaser"/>

    <EditText
        android:id="@+id/cardNumberText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:hint="@string/card_number"/>

    <EditText
        android:id="@+id/cvvText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:hint="@string/cvv"/>

    <EditText
        android:id="@+id/expDateText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="date"
        android:hint="@string/exp_date"/>

    <RadioGroup
        android:id="@+id/receiptGroup"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:checkedButton="@+id/emailRdButton">

        <RadioButton
            android:id="@+id/emailRdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/em_rcpt"/>

        <RadioButton
            android:id="@+id/printRdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prnt_rcpt"/>
    </RadioGroup>


    <Button
        android:id="@+id/submitPmtButton"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:onClick="onSubmitClick"
        android:layout_margin="15dp"
        android:text="@string/submit"/>





</LinearLayout>
