<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <fragment
        android:id="@+id/fragment"
        android:name="jasonmcdonald.personaltrainer.UserFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_user"/>
    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_customer"
        android:textSize="25sp"
        />


    <EditText
        android:id="@+id/firstInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/lastInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/phoneInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"/>



    <EditText
        android:id="@+id/emailInputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textWebEmailAddress"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/takePicButton"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:onClick="onPicClick"
        android:layout_margin="15dp"
        android:text="@string/take_a_picture"/>

    <Button
        android:id="@+id/addCustomerButton"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:onClick="onAddClick"
        android:layout_margin="15dp"
        android:text="@string/add_trainee"/>
</LinearLayout>
