<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <fragment
        android:id="@+id/fragment"
        android:name="jasonmcdonald.personaltrainer.UserFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_user"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        />

    <TextView
        android:id="@+id/customerPayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:text="Customer Name"/>//TODO: make auto completed

    <EditText
        android:id="@+id/cardNumberText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:text="@string/card_number"/>

    <EditText
        android:id="@+id/cvvText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:text="@string/cvv"/>

    <EditText
        android:id="@+id/expDateText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="date"
        android:text="@string/exp_date"/>

    <RadioGroup
        android:id="@+id/receiptGroup"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:checkedButton="@+id/emailRdButton">

        <RadioButton
            android:id="@+id/emailRdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/em_rcpt"/>

        <RadioButton
            android:id="@+id/printRdButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prnt_rcpt"/>
    </RadioGroup>


    <Button
        android:id="@+id/submitPmtButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>




</LinearLayout>
